wip: models tree